--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     一切跟着jy走！
     <h1>跟着JY走，衣服不用愁，裤子到处飞！</h1>
+    <img src="jy盛世美颜.jpg" alt="jy盛世美颜">
+    <p>好姐姐，一起走！</p>
+
 </body>
 
 </html>
